<resources>
	<string name="account_status_stream_error">Stream error</string>
	<string name="missing_presence_subscription">Missing presence subscription</string>
	<string name="this_device_is_no_longer_in_use">This device is no longer in use</string>
	<string name="type_pc">Computer</string>
	<string name="type_phone">Mobile phone</string>
	<string name="type_tablet">Tablet</string>
	<string name="type_web">Web browser</string>
	<string name="type_console">Console</string>
	<string name="payment_required">Payment required</string>
	<string name="missing_internet_permission">Missing internet permission</string>
	<string name="me">Me</string>
	<string name="contact_asks_for_presence_subscription">Contact asks for presence subscription</string>
	<string name="allow">Allow</string>
	<string name="no_permission_to_access_x">No permission to access %s</string>
	<string name="remote_server_not_found">Remote server not found</string>
	<string name="unable_to_update_account">Unable to update account</string>
	<string name="missing_presence_subscription_with_x">Missing presence subscription with %s.</string>
	<string name="missing_keys_from_x">Missing OMEMO keys from %s.</string>
	<string name="missing_omemo_keys">Missing OMEMO keys</string>
	<string name="wrong_conference_configuration">This is not a private, non-anonymous conference.</string>
	<string name="this_conference_has_no_members">There are no members in this conference.</string>
	<string name="report_jid_as_spammer">Report this JID as sending unwanted messages.</string>
	<string name="pref_delete_omemo_identities">Delete OMEMO identities</string>
	<string name="pref_delete_omemo_identities_summary">Regenerate your OMEMO keys. All your contacts will have to verify you again. Use this only as a last resort.</string>
	<string name="delete_selected_keys">Delete selected keys</string>
	<string name="error_publish_avatar_offline">You need to be connected to publish your avatar.</string>
	<string name="show_error_message">Show error message</string>
	<string name="error_message">Error Message</string>
	<string name="data_saver_enabled">Data saver enabled</string>
	<string name="data_saver_enabled_explained">Your operating system is restricting Conversations from accessing the Internet when in background. To receive notifications of new messages you should allow Conversations unrestricted access when Data saver is on.\nConversations will still make an effort to save data when possible.</string>
	<string name="device_does_not_support_data_saver">Your device does not support disabling Data saver for Conversations.</string>
	<string name="error_unable_to_create_temporary_file">Unable to create temporary file</string>
	<string name="this_device_has_been_verified">This device has been verified</string>
	<string name="copy_fingerprint">Copy fingerprint</string>
	<string name="all_omemo_keys_have_been_verified">All OMEMO keys have been verified</string>
	<string name="barcode_does_not_contain_fingerprints_for_this_conversation">Barcode does not contain fingerprints for this conversation.</string>
	<string name="verified_fingerprints">Verified fingerprints</string>
	<string name="use_camera_icon_to_scan_barcode">Use the camera to scan a contact’s barcode</string>
	<string name="please_wait_for_keys_to_be_fetched">Please wait for keys to be fetched</string>
	<string name="share_as_barcode">Share as Barcode</string>
	<string name="share_as_uri">Share as XMPP URI</string>
	<string name="share_as_http">Share as HTTP link</string>
	<string name="pref_blind_trust_before_verification">Blind Trust Before Verification</string>
	<string name="pref_blind_trust_before_verification_summary">Automatically trust all new devices of contacts that haven’t been verified before, and prompt for manual confirmation each time a verified contact adds a new device.</string>
	<string name="blindly_trusted_omemo_keys">Blindly trusted OMEMO keys</string>
	<string name="not_trusted">Untrusted</string>
	<string name="invalid_barcode">Invalid 2D barcode</string>
	<string name="pref_clean_cache_summary">Clean cache folder (used by Camera Application)</string>
	<string name="pref_clean_cache">Clean cache</string>
	<string name="pref_clean_private_storage">Clean private storage</string>
	<string name="pref_clean_private_storage_summary">Clean private storage where files are kept (They can be re-downloaded from the server)</string>
	<string name="domain_name">نام دامنه</string>
	<string name="insert_domain_name_secess">ثبت نام دامنه</string>
	<string name="room">گروه</string>
	<string name="logout">خروج</string>
	<string name="support">پشتیبانی</string>
	<string name="action_add_secure_conversation">گفتگوی امن جدید</string>
	<string name="drawer_open">open side menu</string>
	<string name="drawer_close">clode side menu</string>
	<string name="app_name" translatable="false"></string>
	<string name="action_settings">تنظیمات</string>
	<string name="action_add">گفتگوی جدید</string>
	<string name="action_accounts">مدیریت کاربران</string>
	<string name="action_end_conversation">پایان گفتگو</string>
	<string name="action_contact_details">جزییات مخاطب</string>
	<string name="action_muc_details">جزییات گروه</string>
	<string name="action_secure">گفتگوی امن</string>
	<string name="exit">خروج</string>
	<string name="action_add_account">ورود</string>
	<string name="action_edit_contact">تغییر نام</string>
	<string name="action_add_phone_book">اضافه کردن به دفترچه تلفن</string>
	<string name="action_delete_contact">حذف از دفترچه تلفن</string>
	<string name="action_block_contact">بلاک مخاطب</string>
	<string name="action_unblock_contact">رفع بلاک مخاطب</string>
	<string name="action_block_domain">بلاک کردن محدوده</string>
	<string name="action_unblock_domain">رفع بلاک محدوده</string>
	<string name="title_activity_manage_accounts">مدیریت حساب کاربری</string>
	<string name="title_activity_settings">تنظیمات</string>
	<string name="title_activity_conference_details">گروه Details</string>
	<string name="title_activity_contact_details">Contact Details</string>
	<string name="title_activity_sharewith">Share with Chat</string>
	<string name="title_activity_start_conversation">گفتگوی جدید</string>
	<string name="title_activity_choose_contact">انتخاب مخاطب</string>
	<string name="title_activity_block_list">لیست سیاه</string>
	<string name="just_now">همین الان</string>
	<string name="minute_ago">1 دقیقه پیش</string>
	<string name="minutes_ago">%d پیش دقیق</string>
	<string name="unread_conversations">گفتگوی حوانده نشده</string>
	<string name="sending">در حال ارسال .....</string>
	<string name="message_decrypting">Decrypting message. Please wait…</string>
	<string name="pgp_message">OpenPGP encrypted message</string>
	<string name="nick_in_use">نام کاربری تکراری</string>
	<string name="admin">admin</string>
	<string name="owner">Owner</string>
	<string name="moderator">Moderator</string>
	<string name="participant">Participant</string>
	<string name="visitor">Visitor</string>
	<string name="remove_contact_text">Would you like to remove %s from your roster? The Chat associated with this contact will not be removed.</string>
	<string name="block_contact_text">Would you like to block %s from sending you پیام ها?</string>
	<string name="unblock_contact_text">Would you like to unblock %s and allow them to send you پیام ها?</string>
	<string name="block_domain_text">Block all مخاطبان from %s?</string>
	<string name="unblock_domain_text">Unblock all مخاطبان from %s?</string>
	<string name="contact_blocked">مخاطب بلاک شد</string>
	<string name="remove_bookmark_text">Would you like to remove %s as a bookmark? The Chat associated with this bookmark will not be removed.</string>
	<string name="register_account">Register new account on server</string>
	<string name="change_password_on_server">Change رمز عبور on server</string>
	<string name="share_with">Share with…</string>
	<string name="start_conversation">Start Chat</string>
	<string name="invite_contact">Invite Contact</string>
	<string name="contacts">مخاطبان</string>
	<string name="cancel">Cancel</string>
	<string name="set">تنظیم</string>
	<string name="add">افزودن</string>
	<string name="edit">ویرایش</string>
	<string name="delete">حذف</string>
	<string name="block">بلاک</string>
	<string name="unblock">آنبلاک</string>
	<string name="save">ذخیره</string>
	<string name="ok">تایید</string>
	<string name="crash_report_title">گفتگو باخطا مواجه گردید</string>
	<string name="crash_report_message">By sending in stack traces you are helping the ongoing development of Chat\n<b>Warning:</b> This will use your XMPP account to send the stack trace to the developer.</string>
	<string name="send_now">اارسال شد</string>
	<string name="send_never">دوباره نپرسد</string>
	<string name="problem_connecting_to_account">امکان اتصال به حساب کاربری وجود ندارد</string>
	<string name="problem_connecting_to_accounts">امکان اتصال به حساب کاربری وجود ندارد</string>
	<string name="touch_to_fix">Touch here to manage your accounts</string>
	<string name="attach_file">افزودن فایل</string>
	<string name="not_in_roster">The contact is not in your roster. Would you like to add it?</string>
	<string name="add_contact">افزودن مخاطب</string>
	<string name="send_failed">خطا در دریافت</string>
	<string name="send_rejected">تایید نشد</string>
	<string name="preparing_image">اماده سازی عکس برای ارسال</string>
	<string name="preparing_images">اماده سازی عکس برای ارسال</string>
	<string name="sharing_files_please_wait">Sharing files. Please wait…</string>
	<string name="action_clear_history">پاک کردن تاریخچه</string>
	<string name="clear_conversation_history">پاک کردن تاریخجه گفتگو</string>
	<string name="clear_histor_msg">Do you want to delete all پیام ها within this Chat?\n\n<b>Warning:</b> This will not influence messages stored on other devices or servers.</string>
	<string name="delete_messages">پاک کردن پیام</string>
	<string name="also_end_conversation">End this Chat afterwards</string>
	<string name="choose_presence">Choose presence to contact</string>
	<string name="send_unencrypted_message"></string>
	<string name="send_message_to_x">ارسال پیام به %s</string>
	<string name="send_otr_message">رمز نگاری پیام</string>
	<string name="send_omemo_message">Send OMEMO encrypted message</string>
	<string name="send_omemo_x509_message">Send v\\OMEMO encrypted message</string>
	<string name="send_pgp_message">Send OpenPGP encrypted message</string>
	<string name="your_nick_has_been_changed">Your nickname has been changed</string>
	<string name="send_unencrypted"></string>
	<string name="decryption_failed">Decryption failed. Maybe you don’t have the proper private key.</string>
	<string name="openkeychain_required">OpenKeychain</string>
	<string name="openkeychain_required_long">Chat utilizes a third party app called <b>OpenKeychain</b> to encrypt and decrypt messages and to manage your public keys.\n\nOpenKeychain is licensed under GPLv3 and available on F-Droid and Google Play.\n\n<small>(Please restart Conversations afterwards.)</small></string>
	<string name="restart">شروع مجدد</string>
	<string name="install">نصب</string>
	<string name="openkeychain_not_installed">Please install OpenKeychain</string>
	<string name="offering">offering…</string>
	<string name="waiting">منتظر بمانید…</string>
	<string name="no_pgp_key">No OpenPGP Key found</string>
	<string name="contact_has_no_pgp_key">Chats is unable to encrypt your messages because your contact is not announcing his or hers public key.\n\n<small>Please ask your contact to setup OpenPGP.</small></string>
	<string name="no_pgp_keys">No OpenPGP Keys found</string>
	<string name="contacts_have_no_pgp_keys">Chats is unable to encrypt your messages because your مخاطبین are not announcing their public key.\n\n<small>Please ask your contacts to setup OpenPGP.</small></string>
	<string name="pref_general">عمومی</string>
	<string name="pref_xmpp_resource">XMPP resource</string>
	<string name="create_conference">ساخت گروه</string>
</resources>